--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/mongodb": "^4.0.6",
+    "bcrypt": "^6.0.0",
+    "mongodb": "^6.20.0",
+    "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "typescript": "^5"
   }
 }
