--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/vite": "^4.1.13",
     "@types/bcryptjs": "^2.4.6",
     "@types/mongodb": "^4.0.6",
     "bcrypt": "^6.0.0",
-    "mongodb": "^6.20.0",
+    "mongodb": "^5.9.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
