--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.896.0",
+    "@hookform/resolvers": "^5.2.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/vite": "^4.1.13",
     "@types/bcryptjs": "^2.4.6",
     "@types/mongodb": "^4.0.6",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "mongodb": "^5.9.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "^4.1.13"
+    "react-hook-form": "^7.63.0",
+    "tailwindcss": "^4.1.13",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
