--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.5.3",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "tailwindcss": "^4.1.13",
