--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.896.0",
     "@hookform/resolvers": "^5.2.2",
-    "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/vite": "^4.1.13",
     "@types/bcryptjs": "^2.4.6",
     "@types/mongodb": "^4.0.6",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
+    "dayjs": "^1.11.18",
     "mongodb": "^5.9.2",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
