--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "tailwindcss": "^4.1.13",
+    "use-debounce": "^10.0.6",
     "yup": "^1.7.1"
   },
   "devDependencies": {
