--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
+    "react-calendar": "^6.0.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
